<resources>
    <string name="app_name" translatable="false">YuGiCalc</string>
    <string name="version" translatable="false">v0.3.3</string>

    <string name="button_add" translatable="false">0</string>
    <string name="button_sub" translatable="false">1</string>
    <string name="button_div" translatable="false">2</string>
    <string name="button_neutral" translatable="false">3</string>

    <string name="show_timer">Show timer</string>
    <string name="hide_timer">Hide timer</string>
    <string name="timer_err_too_many_columns">Invalid time input: too many columns</string>
    <string name="timer_err_invalid_symbol">Invalid time input: unknown symbols</string>
    <string name="timer_err_max_exceeded">Timer cannot exceed 5 hours</string>
    <string name="show_history">History</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="dice_lands_on">Dice landed on</string>
    <string name="new_game"><u>New Game</u></string>
    <string name="three_coins">Three Coins</string>
    <string name="settings">Settings</string>
    <string name="dice_title">Dice</string>
    <string name="coin_title">Coin</string>
    <string name="coin_lands_on">Coin landed on</string>
    <string name="result_heads">heads</string>
    <string name="result_tails">tails</string>
    <string name="result_Heads">Heads</string>
    <string name="result_Tails">Tails</string>
    <string name="clear_text">Clear</string>
    <string name="change_view">Change View</string>
    <string name="starting_lp">Starting Life Points</string>
    <string name="keep_screen_on">Keep Screen On</string>
    <string name="remember_games">Only keep 4 games</string>
    <string name="set_lifepoint_max">Maximum 40000</string>
    <string name="set_lifepoint_min">at least 1</string>
    <string name="bad_number_format">Please enter a valid number</string>
    <string name="playername1">Player 1</string>
    <string name="playername2">Player 2</string>
    <string name="show_names">Player Names</string>
    <string name="about_us">About Us</string>
    <string name="our_goal">Our goal was to create a clean and simple App for dueling: \n
    - no long loading screen \n
    - efficient input system \n
    - dice, coin and timer \n
    - history (saved when closing) \n
    - undo, redo and reset button \n
    - no ads \n
 \n
You can choose between two views: \n
1) An innovative input system (add/sub blocks blocks) \n
2) A traditional input system with a number pad \n

 \n
With 1) you can calculate most damages with fewer clicks than with the traditional system. \n
For example 1900 = 1000+1000-100 is only three clicks instead of four with 1+9+00+\"-\". \n
You can also resolve effects like Ring of Destruction for both players simultaneously by using two fingers. \n
 \n
The timer can be shown and hidden by dragging your finger down/up. Dice and coin can be thrown again by tapping them. \n
 \n
Report bugs and submit feedback to:
    </string>
    <string name="playername2long">name too long</string>
    <string name="languageLabel">Language</string>
    <string name="languageInfo">Language will be changed once this dialog is closed.</string>
    <string name="history_show_actions">Show actions</string>
    <string name="history_hide_actions">Hide actions</string>
    <string name="invalid_lang">Invalid language selection</string>
    <string name="clear_history">Clear history</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="buy_coffee">\n
        If you want to say thank you and support us you can
        <a href="https://www.buymeacoffee.com/yugicalc/">buy us a coffee</a> here.
    </string>
</resources>
