<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_width="match_parent">

    <item
        android:id="@+id/action_undo"
        android:orderInCategory="100"
        android:title="Undo"
        android:icon="@drawable/ic_baseline_undo_24px"
        android:onClick="undo"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_redo"
        android:icon="@drawable/ic_baseline_redo_24px"
        android:onClick="redo"
        android:orderInCategory="200"
        android:title="Redo"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_reset"
        android:orderInCategory="300"
        android:title="Reset"
        android:icon="@drawable/ic_baseline_autorenew_24px"
        android:onClick="reset"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_show_history"
        android:orderInCategory="400"
        android:title="@string/show_history"
        android:icon="@drawable/ic_baseline_assignment_24px"
        android:onClick="showHistory"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_show_casino"
        android:icon="@drawable/ic_dice"

        android:orderInCategory="400"
        android:title="Casino"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_show_coin"
        android:icon="@drawable/ic_coin_icon2"
        android:onClick="showCoin"
        android:orderInCategory="450"
        android:title="Coin"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_custom"
        android:orderInCategory="500"
        android:title="@string/change_view"
        android:icon="@drawable/ic_baseline_dialpad_24px"
        android:onClick="changeView"
        app:showAsAction="always" />
    <!--<item
        android:id="@+id/action_3coins"
        android:orderInCategory="600"
        android:title="@string/three_coins"
        android:icon="@drawable/ic_launcher_background"
        android:onClick="threecoins"
        app:showAsAction="never" />-->
    <item
        android:id="@+id/action_start_timer"
        android:orderInCategory="700"
        android:title="@string/show_timer"
        android:icon="@drawable/ic_baseline_add_circle_outline_24px"
        android:onClick="toggleTimerVisibility"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="800"
        android:title="@string/settings"
        android:icon="@drawable/ic_launcher_background"
        android:onClick="showSettings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about_us"
        android:orderInCategory="750"
        android:title="@string/about_us"
        android:icon="@drawable/ic_baseline_add_circle_outline_24px"
        android:onClick="showAboutUs"
        app:showAsAction="ifRoom" />



</menu>